fix: 調整系統相容性

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "output": "dist"
     },
     "asar": true,
+    "npmRebuild": false,
     "files": [
       "main.js",
       "preload.js",
